Fix logo on mobile frontpage

--- a/css/design.css
+++ b/css/design.css
@@ -79,7 +79,6 @@ div.overlay-centered {
 .custom-container-frontpage {
   max-width: 80%;
   height: 100%;
-  position: relative;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -254,7 +253,6 @@ and (-webkit-min-device-pixel-ratio: 2)
     max-width: 100%;
     width: 100%;
     height: 100%;
-    position: relative;
     display: flex;
     flex-direction: column;
   }
@@ -275,6 +273,11 @@ and (-webkit-min-device-pixel-ratio: 2)
     max-width: 80%;
   }
   
+  img.logo {
+    max-width: 100%;
+    margin: 0 auto;
+  }
+
   .home-nav {
     color: var(--ls-white);
     list-style: none;
@@ -361,7 +364,6 @@ and (max-width: 767px)
     max-width: 95%;
     width: 95%;
     height: 100%;
-    position: relative;
     display: flex;
     flex-direction: row;
     align-items: center;
